Style fix and update

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header>
       <picture>
         <source
-          srcset="/assets/images/background-pattern-desktop.svg"
+          srcset="assets/images/background-pattern-desktop.svg"
           media="(min-width:80rem)"
           alt=""
         />
@@ -98,13 +98,14 @@
     </main>
 
     <footer>
-      <div class="attribution">
-        Challenge by &nbsp;
+      <p class="attribution">
+        Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
-        >. Coded by &nbsp;
-        <a href="https://github.com/mazz100">Mazen Hassan</a>.
-      </div>
+        >
+        . Coded by
+        <a href="https://github.com/mazz100" target="_blank">Mazen Hassan</a>.
+      </p>
     </footer>
   </body>
 </html>
